welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value T
	for ( k <- 0 to (T.length-1 ) )  {
                         ^